Export space-efficient embeddings for TCU and ETCU models as intermediate output from which to recreate the publication figures.

--- a/scripts/ETCU/publication_figures/Extended_treatment_control_use_case_iLISI.ipynb
+++ b/scripts/ETCU/publication_figures/Extended_treatment_control_use_case_iLISI.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "heated-desert",
+   "id": "economic-musical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "veterinary-bradley",
+   "id": "inappropriate-litigation",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "early-congo",
+   "id": "polished-bennett",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sublime-decimal",
+   "id": "wooden-administration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cosmetic-rouge",
+   "id": "metric-apparel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "vanilla-confidence",
+   "id": "cardiovascular-residence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "burning-helmet",
+   "id": "occasional-narrow",
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +360,7 @@
     "score_dict = {}\n",
     "for model in models:\n",
     "    score_dict[model] = {}\n",
-    "    adata = ad.read_h5ad('./../../../models/ETCU/{}/adata.h5ad'.format(model))\n",
-    "    embedding = ad.AnnData(adata.obsm['embedding'], obs=adata.obs, obsm=adata.obsm, uns=adata.uns, obsp=adata.obsp)\n",
+    "    embedding = ad.read_h5ad('./../Predictions/{}.prediction.h5ad'.format(model))\n",
     "    score_dict[model]['iLISI_sample'] = scib.me.lisi.ilisi_graph(embedding, batch_key='sample', multiprocessing=True)\n",
     "    \n",
     "    # DOGMA-seq-specific metrics\n",
@@ -405,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sophisticated-auditor",
+   "id": "disciplinary-workplace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "critical-customs",
+   "id": "collect-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "capital-approach",
+   "id": "chicken-pursuit",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dominant-merchant",
+   "id": "advance-criterion",
    "metadata": {},
    "outputs": [
     {
@@ -612,20 +611,12 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "amazing-ivory",
+   "id": "classified-wilderness",
    "metadata": {},
    "outputs": [],
    "source": [
-    "iLISI.to_csv(\"./../Evaluation/batch_removal_scores_publication_r1_20240125.csv\", index=True)\n"
+    "iLISI.to_csv(\"./../Evaluation/batch_removal_scores_publication_r1_20240125.csv\", index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "further-india",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
