--- a/scripts/ETCU/publication_figures/Publication_figures_extended_treatment_control_use_case.ipynb
+++ b/scripts/ETCU/publication_figures/Publication_figures_extended_treatment_control_use_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "elder-granny",
+   "id": "dirty-helicopter",
    "metadata": {},
    "source": [
     "# Save figures for publication \n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "plastic-christianity",
+   "id": "federal-rings",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "digital-handbook",
+   "id": "enabling-dover",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "guilty-funds",
+   "id": "changed-heather",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "continent-switzerland",
+   "id": "enormous-weather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "unnecessary-certification",
+   "id": "fitted-dispatch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "automatic-walker",
+   "id": "creative-emission",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "stretch-panic",
+   "id": "patent-metro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "theoretical-america",
+   "id": "fifty-convertible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "first-latitude",
+   "id": "ruled-exhibit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "entire-departure",
+   "id": "changing-verification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "convenient-building",
+   "id": "inclusive-logic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "regulated-halifax",
+   "id": "industrial-billion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "killing-finger",
+   "id": "initial-hepatitis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "terminal-comparative",
+   "id": "careful-observation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "coordinate-equipment",
+   "id": "super-dependence",
    "metadata": {},
    "outputs": [
     {
@@ -411,9 +411,10 @@
     "for model in models:\n",
     "    print(model)\n",
     "    # Read embeddings\n",
-    "    embedding =  ad.read_h5ad(\"./../../../models/ETCU/{}/adata.h5ad\".format(model))\n",
+    "    embedding = ad.read_h5ad('./../Predictions/{}.prediction.h5ad'.format(model))\n",
     "    embedding.obs['DOGMA_rep'] = embedding.obs['sample'].apply(lambda x: 'DOGMA_Rep1' if 'DIG' in x else 'DOGMA_Rep2' if 'LLL' in x else np.nan).astype('category')\n",
     "    embedding.obs['DOGMA_cond'] = embedding.obs['sample'].apply(lambda x: 'DOGMA_Ctrl' if 'CTRL' in x else 'DOGMA_Stim' if 'STIM' in x else np.nan).astype('category')\n",
+    "    # gunzip if required\n",
     "    DOGMA_adata = sc.read_h5ad(\"./../../../data/derived/Mimitou2021/DOGMA_seq/preprocessed_DOGMA.h5ad\")\n",
     "\n",
     "    features = pd.read_csv(\"./../../../data/original/Mimitou2021/DOGMA_seq/DIG_CTRL/ADT/\" +  \"features.tsv.gz\", header=None, names=[\"protein_names\"]).set_index('protein_names')\n",
@@ -543,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "infrared-leave",
+   "id": "atomic-syria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "accomplished-receipt",
+   "id": "disciplinary-jesus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "specialized-constitution",
+   "id": "friendly-alert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "spanish-decision",
+   "id": "technological-monitoring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "collaborative-tiffany",
+   "id": "lasting-suite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "earned-davis",
+   "id": "concerned-still",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cubic-logging",
+   "id": "dutch-shuttle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,11 +621,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "golden-section",
+   "id": "pleased-hometown",
    "metadata": {},
    "outputs": [],
    "source": [
-    "font_dirs = [\"/home/prauten/miniconda3/envs/scib_v1.0.1_min/fonts\"]  # The path to the custom font file.\n",
+    "font_dirs = [\"miniconda3/envs/scib_v1.0.1_min/fonts\"]  # The path to the custom font file.\n",
     "font_files = fm.findSystemFonts(fontpaths=font_dirs)\n",
     "\n",
     "for font_file in font_files:\n",
@@ -634,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "municipal-graduate",
+   "id": "favorite-portal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "medium-corrections",
+   "id": "patient-stock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "precious-treat",
+   "id": "above-austin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "younger-cowboy",
+   "id": "biblical-privilege",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "numerous-clause",
+   "id": "bored-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "different-boring",
+   "id": "specialized-hopkins",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alpha-ranking",
+   "id": "compound-party",
    "metadata": {},
    "outputs": [
     {
