--- a/scripts/TCU/publication_figures/Publication_figures_treatment_control_use_case.ipynb
+++ b/scripts/TCU/publication_figures/Publication_figures_treatment_control_use_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "rolled-train",
+   "id": "smooth-alpha",
    "metadata": {},
    "source": [
     "# Save figures for publication \n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "removed-blogger",
+   "id": "designed-airplane",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "swedish-pearl",
+   "id": "declared-montana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "demanding-gazette",
+   "id": "plain-coaching",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "reduced-provision",
+   "id": "fundamental-money",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "democratic-meaning",
+   "id": "silver-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "configured-shade",
+   "id": "exempt-cattle",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "short-complex",
+   "id": "athletic-compound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "overall-recorder",
+   "id": "australian-planner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "diverse-classroom",
+   "id": "institutional-traveler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "complex-cyprus",
+   "id": "plastic-beijing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "desirable-shelf",
+   "id": "thorough-current",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "restricted-recording",
+   "id": "breathing-perry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "expressed-technician",
+   "id": "compact-parallel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "coral-ocean",
+   "id": "generic-revolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "reverse-senior",
+   "id": "dangerous-works",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
     "# Collect computed scores, nested dict is simple to convert to pd.DataFrame\n",
     "for model in models:\n",
     "    # Read embeddings\n",
-    "    embedding =  ad.read_h5ad(\"./../../../models/TCU/{}/adata.h5ad\".format(model))\n",
+    "    embedding = ad.read_h5ad(\"./../Predictions/{}.prediction.h5ad\".format(model))\n",
     "    embedding.obs['replicate'] = embedding.obs['buffer']\n",
     "    \n",
     "    # use colorblind friendly colors for variables\n",
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "phantom-compound",
+   "id": "geographic-lemon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "confidential-viking",
+   "id": "current-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
     "# Collect computed scores, nested dict is simple to convert to pd.DataFrame\n",
     "for model in models:\n",
     "    # Read embeddings\n",
-    "    embedding =  ad.read_h5ad(\"./../../../models/TCU/{}/adata.h5ad\".format(model))\n",
+    "    embedding = ad.read_h5ad(\"./../Predictions/{}.prediction.h5ad\".format(model))\n",
     "    embedding.obs['replicate'] = embedding.obs['buffer']\n",
     "    \n",
     "    # add ADT data\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "female-amplifier",
+   "id": "recorded-payroll",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
     "# Collect computed scores, nested dict is simple to convert to pd.DataFrame\n",
     "for model in models:\n",
     "    # Read embeddings\n",
-    "    embedding =  ad.read_h5ad(\"./../../../models/TCU/{}/adata.h5ad\".format(model))\n",
+    "    embedding = ad.read_h5ad(\"./../Predictions/{}.prediction.h5ad\".format(model))\n",
     "    embedding.obs['replicate'] = embedding.obs['buffer']\n",
     "    \n",
     "    # add ADT data\n",
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "settled-mercury",
+   "id": "aerial-stations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "solid-matter",
+   "id": "weekly-assessment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "superior-browser",
+   "id": "coastal-assessment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "relevant-crossing",
+   "id": "suffering-wales",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "active-means",
+   "id": "indie-demand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sudden-lithuania",
+   "id": "improved-import",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "geographic-regression",
+   "id": "distant-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,11 +1021,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "loose-reset",
+   "id": "plain-underwear",
    "metadata": {},
    "outputs": [],
    "source": [
-    "font_dirs = [\"/home/prauten/miniconda3/envs/scib_v1.0.1_min/fonts\"]  # The path to the custom font file.\n",
+    "font_dirs = [\"miniconda3/envs/scib_v1.0.1_min/fonts\"]  # The path to the custom font file.\n",
     "font_files = fm.findSystemFonts(fontpaths=font_dirs)\n",
     "\n",
     "for font_file in font_files:\n",
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dense-independence",
+   "id": "burning-patrick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "tough-taxation",
+   "id": "perceived-possibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "nearby-photograph",
+   "id": "coated-rolling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "proof-wholesale",
+   "id": "thirty-carroll",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "opposite-bermuda",
+   "id": "advisory-citation",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ignored-completion",
+   "id": "subsequent-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "possible-butler",
+   "id": "genuine-lawrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "terminal-purpose",
+   "id": "naked-guarantee",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "sitting-andrews",
+   "id": "differential-istanbul",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "favorite-farmer",
+   "id": "united-grass",
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "indoor-tiger",
+   "id": "incredible-venture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "radical-lindsay",
+   "id": "minimal-leadership",
    "metadata": {},
    "outputs": [
     {
