--- a/scripts/TCU/publication_figures/Treatment_control_use_case_iLISI.ipynb
+++ b/scripts/TCU/publication_figures/Treatment_control_use_case_iLISI.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "harmful-vienna",
+   "id": "geological-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "innovative-majority",
+   "id": "humanitarian-twenty",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unsigned-newspaper",
+   "id": "partial-stylus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "unlikely-petite",
+   "id": "unique-edwards",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "verified-coordinator",
+   "id": "american-secretary",
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +178,7 @@
     "score_dict = {}\n",
     "for model in models:\n",
     "    score_dict[model] = {}\n",
-    "    adata = ad.read_h5ad('./../../../models/TCU/{}/adata.h5ad'.format(model))\n",
-    "    embedding = ad.AnnData(adata.obsm['embedding'], obs=adata.obs, obsm=adata.obsm, uns=adata.uns, obsp=adata.obsp)\n",
+    "    embedding = ad.read_h5ad('./../Predictions/{}.prediction.h5ad'.format(model))\n",
     "    score_dict[model]['iLISI_sample'] = scib.me.lisi.ilisi_graph(embedding, batch_key='sample', multiprocessing=True)\n",
     "    score_dict[model]['iLISI_replicate'] = scib.me.lisi.ilisi_graph(embedding, batch_key='buffer', multiprocessing=True)\n",
     "    score_dict[model]['iLISI_condition'] = scib.me.lisi.ilisi_graph(embedding, batch_key='condition', multiprocessing=True)\n"
@@ -188,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "billion-portsmouth",
+   "id": "imperial-singapore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ideal-bidder",
+   "id": "irish-accessory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fuzzy-corps",
+   "id": "stretch-certification",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "minute-storage",
+   "id": "least-classification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "quarterly-spectacular",
+   "id": "moral-lying",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "unable-hours",
+   "id": "distant-loading",
    "metadata": {},
    "outputs": [],
    "source": [
